--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "echarts": "^5.2.2",
+    "react-redux": "^7.2.6",
+    "redux-thunk": "^2.4.1",
+    "react-router-dom": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
