--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,13 +12,15 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "babel-jest": "^27.5.1",
     "echarts": "^5.2.2",
-    "react-redux": "^7.2.6",
-    "redux-thunk": "^2.4.1",
-    "react-router-dom": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "^17.0.2",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
