--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.0",
     "babel-jest": "^27.5.1",
     "echarts": "^5.2.2",
+    "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
