--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "echarts-stat": "^1.2.0",
     "express": "^4.17.3",
     "http-proxy-middleware": "^2.0.3",
+    "nanoid": "^3.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
